--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-ui-rating",
-  "version": "2.0.0-beta.2",
+  "version": "2.1.0",
   "description": "Material style rating",
   "main": "lib/index.js",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TeamWertarbyte/material-ui-rating.git"
+    "url": "git+https://github.com/Zephyrrus/material-ui-rating.git"
   },
   "keywords": [
     "react",
@@ -26,35 +26,26 @@
   "author": "Wertarbyte <kontakt@wertarbyte.com> (https://wertarbyte.com)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TeamWertarbyte/material-ui-rating/issues"
+    "url": "https://github.com/Zephyrrus/material-ui-rating/issues"
   },
-  "homepage": "https://github.com/TeamWertarbyte/material-ui-rating#readme",
+  "homepage": "https://github.com/Zephyrrus/material-ui-rating#readme",
   "devDependencies": {
     "@webpack-blocks/babel6": "^0.4.1",
     "@webpack-blocks/postcss": "^0.4.3",
     "@webpack-blocks/webpack2": "^0.4.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-direct-import": "^0.4.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-plugin-material-ui": "^0.3.1",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "gh-pages": "^1.0.0",
-    "material-ui": "^1.0.0-beta.36",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-styleguidist": "^6.0.33",
-    "standard": "^11.0.0"
-  },
-  "peerDependencies": {
-    "material-ui": "^1.0.0-beta.36",
-    "react": "^16.0.0"
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
+    "prop-types": "^15.5.8",
+    "react": "^16.7.0",
+    "react-dom": "^16.4.1",
+    "react-styleguidist": "^5.2.1"
   },
   "dependencies": {
     "prop-types": "^15.5.8"
