--- a/package.json
+++ b/package.json
@@ -30,18 +30,22 @@
   },
   "homepage": "https://github.com/Zephyrrus/material-ui-rating#readme",
   "devDependencies": {
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
     "@webpack-blocks/babel6": "^0.4.1",
     "@webpack-blocks/postcss": "^0.4.3",
     "@webpack-blocks/webpack2": "^0.4.0",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-plugin-material-ui": "^0.3.1",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-direct-import": "^0.4.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "gh-pages": "^1.0.0",
-    "@material-ui/core": "^3.8.3",
-    "@material-ui/icons": "^3.0.2",
     "prop-types": "^15.5.8",
     "react": "^16.7.0",
     "react-dom": "^16.4.1",
@@ -49,8 +53,5 @@
   },
   "dependencies": {
     "prop-types": "^15.5.8"
-  },
-  "standard": {
-    "parser": "babel-eslint"
   }
 }
